hot news container

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
                 <div class="tag yellow">НЕДВИЖИМОСТЬ</div>
                 <span class="data">29 сентября 2020 в 10:58</span>
                 <div class="statistic">
-                    <img src="./public/heart.svg" alt="">
-                    1,5 тыс
-                </div>
-                <div class="statistic">
-                    <img src="./public/comments.svg" alt="">
-                    11,5 тыс
+                    <div>
+                        <img src="./public/heart.svg" alt="">
+                        1,5 тыс
+                    </div>
+                    <div>
+                        <img src="./public/comments.svg" alt="">
+                        11,5 тыс
+                    </div>
                 </div>
             </div>
             <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна он
@@ -60,12 +62,14 @@
                 <div class="tag green">ФИНАНСЫ</div>
                 <span class="data">29 сентября 2020 в 10:58</span>
                 <div class="statistic">
-                    <img src="./public/heart.svg" alt="">
-                    1,5 тыс
-                </div>
-                <div class="statistic">
-                    <img src="./public/comments.svg" alt="">
-                    11,5 тыс
+                    <div>
+                        <img src="./public/heart.svg" alt="">
+                        1,5 тыс
+                    </div>
+                    <div>
+                        <img src="./public/comments.svg" alt="">
+                        11,5 тыс
+                    </div>
                 </div>
             </div>
             <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна он
@@ -76,7 +80,57 @@
         </div>
         <!--конец второй новости-->
     </div>
-    <div class="hot-container"></div>
+    <div class="hot-container">
+        <h2>Горячее</h2>
+
+        <div class="small-news-container">
+            <img src="./public/news1.jpg" alt="">
+            <div class="tag blue">СПОРТ</div>
+            <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <div class="statistic">
+                <div>
+                    <img src="./public/heart.svg" alt="">
+                    1,5 тыс
+                </div>
+                <div>
+                    <img src="./public/comments.svg" alt="">
+                    11,5 тыс
+                </div>
+            </div>
+        </div>
+        <!--контейнер новостей-->
+        <div class="small-news-container">
+            <img src="./public/news1.jpg" alt="">
+            <div class="tag blue">СПОРТ</div>
+            <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <div class="statistic">
+                <div>
+                    <img src="./public/heart.svg" alt="">
+                    1,5 тыс
+                </div>
+                <div>
+                    <img src="./public/comments.svg" alt="">
+                    11,5 тыс
+                </div>
+            </div>
+        </div>
+        <div class="small-news-container">
+            <img src="./public/news1.jpg" alt="">
+            <div class="tag blue">СПОРТ</div>
+            <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <div class="statistic">
+                <div>
+                    <img src="./public/heart.svg" alt="">
+                    1,5 тыс
+                </div>
+                <div>
+                    <img src="./public/comments.svg" alt="">
+                    11,5 тыс
+                </div>
+            </div>
+        </div>
+        <!--конец-->
+    </div>
     <div class="last-news"></div>
 </main>
 </body>
