last-news-container finish main page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,39 @@
         </div>
         <!--конец-->
     </div>
-    <div class="last-news"></div>
+    <div class="last-news">
+        <h2>Последние новости</h2>
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <!-- маленькие новости ещё-->
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <div class="news-description">
+            <span>16:20</span>
+            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+        </div>
+        <!--конец-->
+    </div>
 </main>
 </body>
 </html>
