begin adding comments

--- a/news.html
+++ b/news.html
@@ -67,6 +67,19 @@
                 этого —
                 с момента основания в 2000 году — портал работал без этого статуса.</p>
         </div>
+        <div class="comments-container">
+            <div class="name">Комментарии: <span>11,5 тыс</span></div>
+            <div class="add-container">
+                <img src="./public/user_logo.svg" alt="">
+                <div>
+                    <input type="text" placeholder="Оставьте комментарий">
+                    <div class="button-container">
+                        <button>Отмена</button>
+                        <button class="add-button">Оставить комментарий</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="last-news">
         <h2>Последние новости</h2>
