--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 <body>
 <header>
     <div class="header-container">
-        <a href="#"><img src="./public/logo.svg" alt="LIVE"></a>
+        <a href="./index.html"><img src="./public/logo.svg" alt="LIVE"></a>
         <nav>
             <div>Новости</div>
             <div>Финансы</div>
@@ -70,12 +70,48 @@
         <div class="comments-container">
             <div class="name">Комментарии: <span>11,5 тыс</span></div>
             <div class="add-container">
-                <img src="./public/user_logo.svg" alt="">
+                <img class="user-comment-image" src="./public/user_logo.svg" alt="">
                 <div>
                     <input type="text" placeholder="Оставьте комментарий">
                     <div class="button-container">
                         <button>Отмена</button>
                         <button class="add-button">Оставить комментарий</button>
+                    </div>
+                </div>
+            </div>
+            <div class="added-comments-container">
+                <div class="comment-container">
+                    <img class="user-comment-image" src="./public/user_logo.svg" alt="">
+                    <div>
+                        <span class="username">Андрей Свиридов</span>
+                        <div class="comment-text">
+                            На Максима подписан уже месяца три, все пересмотрел - много в чем не согласен с ним но и
+                            много в чем разделяю его мнение.
+                            Спасибо за работу.
+                            Ваш канал лично меня заставляет задуматся и в тех моментах с которыми не согласен заставляет
+                            самому попитатся докопатся до истины.
+                            А это саморазвитие уже. Лайк за постоянство !!! Лайк за оперативность !!!
+                        </div>
+                        <span class="answer">Ответить</span>
+                        <span class="hide-show"> <img src="./public/up-arrow.svg" alt="">Скрыть все ответы</span>
+                        <div class="comment-container">
+                            <img src="./public/user_logo.svg" alt="" class="subcomment-user-logo">
+                            <div>
+                                <span class="username">Я</span>
+                                <div class="comment-text">
+                                    <span class="answer-reference">@Максим Давыдов</span>
+                                    На Максима подписан уже месяца три, все пересмотрел - много в чем не согласен с ним
+                                    но и
+                                    много в чем разделяю его мнение.
+                                    Спасибо за работу.
+                                    Ваш канал лично меня заставляет задуматся и в тех моментах с которыми не согласен
+                                    заставляет
+                                    самому попитатся докопатся до истины.
+                                    А это саморазвитие уже. Лайк за постоянство !!! Лайк за оперативность !!!
+                                </div>
+                                <span class="answer">Редактировать</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
