add statistics-container finish news page

--- a/news.html
+++ b/news.html
@@ -35,7 +35,15 @@
 </header>
 <main>
     <div class="statistics-container">
-
+        <div>
+            <img src="./public/heart.svg" alt="">
+            11,5 тыс
+        </div>
+        <div>
+            <img src="./public/comments.svg" alt="">
+            11,5 тыс
+        </div>
+        <img src="./public/edit.svg" alt="" class="edit">
     </div>
     <div class="full-news-container">
         <div class="info-container">
