--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <header>
     <div class="header-container">
-        <a href="#"><img src="./public/logo.svg" alt="LIVE"></a>
+        <a href="./index.html"><img src="./public/logo.svg" alt="LIVE"></a>
         <nav>
             <div>Новости</div>
             <div>Финансы</div>
@@ -36,7 +36,9 @@
 <main>
     <div class="main-news-container">
         <div class="big-news-container">
-            <img src="./public/news1.jpg" alt="">
+            <a href="./news.html">
+                <img src="./public/news1.jpg" alt="">
+            </a>
             <div class="info-container">
                 <div class="tag yellow">НЕДВИЖИМОСТЬ</div>
                 <span class="data">29 сентября 2020 в 10:58</span>
@@ -51,17 +53,22 @@
                     </div>
                 </div>
             </div>
-            <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна он
-                занимал должность легата</h1>
-            <p>Будущий император Гай Вибий Требониан Галл родился около 206 года.
-                Эта датировка основана на сообщении Псевдо-Аврелия Виктора, который в своей «Эпитоме» пишет, что на
-                момент смерти Гаю было примерно сорок семь лет.</p>
+            <a href="./news.html">
+                <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна
+                    он
+                    занимал должность легата</h1>
+                <p>Будущий император Гай Вибий Требониан Галл родился около 206 года.
+                    Эта датировка основана на сообщении Псевдо-Аврелия Виктора, который в своей «Эпитоме» пишет, что на
+                    момент смерти Гаю было примерно сорок семь лет.</p>
+            </a>
         </div>
         <!-- Вторая новость -->
         <div class="big-news-container">
-            <img src="./public/news1.jpg" alt="">
+            <a href="./news.html">
+                <img src="./public/news1.jpg" alt="">
+            </a>
             <div class="info-container">
-                <div class="tag green">ФИНАНСЫ</div>
+                <div class="tag yellow">НЕДВИЖИМОСТЬ</div>
                 <span class="data">29 сентября 2020 в 10:58</span>
                 <div class="statistic">
                     <div>
@@ -74,11 +81,14 @@
                     </div>
                 </div>
             </div>
-            <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна он
-                занимал должность легата</h1>
-            <p>Будущий император Гай Вибий Требониан Галл родился около 206 года.
-                Эта датировка основана на сообщении Псевдо-Аврелия Виктора, который в своей «Эпитоме» пишет, что на
-                момент смерти Гаю было примерно сорок семь лет.</p>
+            <a href="./news.html">
+                <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна
+                    он
+                    занимал должность легата</h1>
+                <p>Будущий император Гай Вибий Требониан Галл родился около 206 года.
+                    Эта датировка основана на сообщении Псевдо-Аврелия Виктора, который в своей «Эпитоме» пишет, что на
+                    момент смерти Гаю было примерно сорок семь лет.</p>
+            </a>
         </div>
         <!--конец второй новости-->
     </div>
@@ -86,9 +96,12 @@
         <h2>Горячее</h2>
 
         <div class="small-news-container">
-            <img src="./public/news1.jpg" alt="">
+            <a href="./news.html">
+                <img src="./public/news1.jpg" alt="">
+            </a>
             <div class="tag blue">СПОРТ</div>
-            <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <a href="./news.html"><h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            </a>
             <div class="statistic">
                 <div>
                     <img src="./public/heart.svg" alt="">
@@ -102,9 +115,12 @@
         </div>
         <!--контейнер новостей-->
         <div class="small-news-container">
-            <img src="./public/news1.jpg" alt="">
+            <a href="./news.html">
+                <img src="./public/news1.jpg" alt="">
+            </a>
             <div class="tag blue">СПОРТ</div>
-            <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <a href="./news.html"><h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            </a>
             <div class="statistic">
                 <div>
                     <img src="./public/heart.svg" alt="">
@@ -117,9 +133,12 @@
             </div>
         </div>
         <div class="small-news-container">
-            <img src="./public/news1.jpg" alt="">
+            <a href="./news.html">
+                <img src="./public/news1.jpg" alt="">
+            </a>
             <div class="tag blue">СПОРТ</div>
-            <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <a href="./news.html"><h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            </a>
             <div class="statistic">
                 <div>
                     <img src="./public/heart.svg" alt="">
