--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 </div>
             </div>
             <a href="./news.html">
-                <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна
-                    он
+                <h1>Требониан Галл происходил из старинного этрусского рода.
+                    В конце правления императора Деция Траяна он
                     занимал должность легата</h1>
                 <p>Будущий император Гай Вибий Требониан Галл родился около 206 года.
-                    Эта датировка основана на сообщении Псевдо-Аврелия Виктора, который в своей «Эпитоме» пишет, что на
-                    момент смерти Гаю было примерно сорок семь лет.</p>
+                    Эта датировка основана на сообщении Псевдо-Аврелия Виктора, который
+                    в своей «Эпитоме» пишет, что на момент смерти Гаю было примерно сорок семь лет.</p>
             </a>
         </div>
         <!-- Вторая новость -->
@@ -96,11 +96,13 @@
         <h2>Горячее</h2>
 
         <div class="small-news-container">
-            <a href="./news.html">
+            <a href="./news.html" class="image-link">
                 <img src="./public/news1.jpg" alt="">
             </a>
             <div class="tag blue">СПОРТ</div>
-            <a href="./news.html"><h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <a class="header" href="./news.html">
+                <h2>Проглотившая слона змея стала классикой
+                    за 2000 лет до «Маленького принца».</h2>
             </a>
             <div class="statistic">
                 <div>
@@ -119,7 +121,8 @@
                 <img src="./public/news1.jpg" alt="">
             </a>
             <div class="tag blue">СПОРТ</div>
-            <a href="./news.html"><h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <a class="header" href="./news.html">
+                <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
             </a>
             <div class="statistic">
                 <div>
@@ -137,7 +140,8 @@
                 <img src="./public/news1.jpg" alt="">
             </a>
             <div class="tag blue">СПОРТ</div>
-            <a href="./news.html"><h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
+            <a class="header" href="./news.html">
+                <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
             </a>
             <div class="statistic">
                 <div>
@@ -156,7 +160,8 @@
         <h2>Последние новости</h2>
         <div class="news-description">
             <span>16:20</span>
-            В Сети появился список, где в Минске устанавливают видеокамеры для наблюдения за улицей
+            В Сети появился список,
+            где в Минске устанавливают видеокамеры для наблюдения за улицей
         </div>
         <!-- маленькие новости ещё-->
         <div class="news-description">
